add: level 1 overloaded

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,35 @@
         "complex": "cpp",
         "type_traits": "cpp",
         "variant": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "__split_buffer": "cpp",
+        "__verbose_abort": "cpp",
+        "__verbose_trap": "cpp",
+        "cctype": "cpp",
+        "clocale": "cpp",
+        "cmath": "cpp",
+        "cstddef": "cpp",
+        "cstdint": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cstring": "cpp",
+        "ctime": "cpp",
+        "cwchar": "cpp",
+        "cwctype": "cpp",
+        "ios": "cpp",
+        "iosfwd": "cpp",
+        "locale": "cpp",
+        "new": "cpp",
+        "queue": "cpp",
+        "streambuf": "cpp",
+        "typeinfo": "cpp",
+        "__locale": "cpp",
+        "__log_hardening_failure": "cpp",
+        "cstdarg": "cpp",
+        "execution": "cpp",
+        "initializer_list": "cpp",
+        "mutex": "cpp",
+        "print": "cpp",
+        "stack": "cpp"
     }
 }
